jitfailure-ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b/error.log
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp: In member function 'virtual void ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const':
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:102:18: error: redeclaration of 'const double J_c0'
  102 |     const double J_c0 = coordinate_dofs[0] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:91:18: note: 'const double J_c0' previously declared here
   91 |     const double J_c0 = coordinate_dofs[0] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:103:18: error: redeclaration of 'const double J_c3'
  103 |     const double J_c3 = coordinate_dofs[1] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:92:18: note: 'const double J_c3' previously declared here
   92 |     const double J_c3 = coordinate_dofs[1] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:104:18: error: redeclaration of 'const double J_c1'
  104 |     const double J_c1 = coordinate_dofs[0] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:93:18: note: 'const double J_c1' previously declared here
   93 |     const double J_c1 = coordinate_dofs[0] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:105:18: error: redeclaration of 'const double J_c2'
  105 |     const double J_c2 = coordinate_dofs[1] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
/tmp/tmp2v04v9j6/ffc_form_7d9e6e0c8f0275a82931f0fa0e652d519702f88b.cpp:94:18: note: 'const double J_c2' previously declared here
   94 |     const double J_c2 = coordinate_dofs[1] * FE11_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE11_C0_D01_Q1[0][0][1];
      |                  ^~~~
